[Checkout]: notification implemented
