# src/infra/@shared/api/express.ts
@@ -1,13 +1,13 @@
 import 'express-async-errors';
 import express, { NextFunction } from 'express';
 import { Sequelize } from 'sequelize-typescript';
-import CustomerModel from '../../customer/db/sequelize/model/customer.model';
-import ProductModel from '../../product/db/sequelize/model/product.model';
+import CustomerModel from '@infra/customer/db/sequelize/model/customer.model';
+import ProductModel from '@infra/product/db/sequelize/model/product.model';
 import routes from './route/index.routes';
 import { Request, Response } from 'express';
 import ErrorHandling from './middleware/error.handling.midlleware';
-import OrderModel from '../../order/db/sequelize/model/order.model';
-import OrderItemModel from '../../order/db/sequelize/model/order-item.model';
+import OrderModel from '@infra/checkout/db/sequelize/model/order.model';
+import OrderItemModel from '@infra/checkout/db/sequelize/model/order-item.model';
 import swaggerUi from 'swagger-ui-express';
 import YAML from 'yaml';
 import fs from 'fs';
