# src/infra/@shared/api/route/index.routes.ts
@@ -1,12 +1,12 @@
 import { Router } from 'express';
 import customerRouter from '@infra/customer/api/route/customer.routes';
 import productRouter from '@infra/product/api/route/product.routes';
-import orderRouter from '@infra/order/api/route/order.routes';
+import orderRouter from '@infra/checkout/api/route/order.routes';
 
 const routes = Router();
 
 routes.use('/customer', customerRouter);
 routes.use('/product', productRouter);
-routes.use('/order', orderRouter);
+routes.use('/checkout', orderRouter);
 
 export default routes;
